--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "path": "^0.12.7",
-    "pug": "^2.0.0-rc.1"
+    "pug": "^2.0.0-rc.1",
+    "slugs": "^0.1.3"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
