--- a/package.json
+++ b/package.json
@@ -7,28 +7,41 @@
   "author": "Jamie Halvorson",
   "license": "MIT",
   "scripts": {
-    "watch": "nodemon ./start.js",
-    "start": "npm run watch"
+    "watch": "nodemon ./start.js --ignore public/",
+    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"🖥, 💅\" --prefix name",
+    "assets": "webpack -w --display-max-modules 0"
   },
+  "browserslist": "last 2 versions",
   "dependencies": {
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
+    "concurrently": "^3.4.0",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "glob": "^7.1.2",
     "mongoose": "^4.10.4",
     "mongoose-mongodb-errors": "^0.0.2",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "path": "^0.12.7",
+    "postcss-loader": "^2.0.5",
     "pug": "^2.0.0-rc.1",
-    "slugs": "^0.1.3"
+    "sass-loader": "^6.0.5",
+    "slugs": "^0.1.3",
+    "webpack": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
