--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Jamie Halvorson",
   "license": "MIT",
   "scripts": {
-    "watch": "nodemon ./start.js --ignore public/",
+    "watch": "nodemon ./start.js --ignore public/uploads",
     "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"🖥, 💅\" --prefix name",
     "assets": "webpack -w --display-max-modules 0"
   },
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
     "concurrently": "^3.4.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.4",
@@ -29,6 +30,7 @@
     "express-validator": "^3.2.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "glob": "^7.1.2",
+    "md5": "^2.2.1",
     "mongoose": "^4.10.4",
     "mongoose-mongodb-errors": "^0.0.2",
     "node-sass": "^4.5.3",
@@ -41,6 +43,7 @@
     "pug": "^2.0.0-rc.1",
     "sass-loader": "^6.0.5",
     "slugs": "^0.1.3",
+    "validator": "^7.0.0",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
