--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "main": "index.js",
   "author": "Jamie Halvorson",
   "license": "MIT",
+  "engines": {
+    "node": ">= 7.6.0"
+  },
+  "now": {
+    "dotenv": "variables.env.now"
+  },
   "scripts": {
     "watch": "nodemon ./start.js --ignore public/uploads",
-    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"🖥, 💅\" --prefix name",
-    "assets": "webpack -w --display-max-modules 0"
+    "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"🖥, 💅\" --prefix name",
+    "assets": "webpack -w --display-max-modules 0",
+    "start": "node ./start.js"
   },
   "browserslist": "last 2 versions",
   "dependencies": {
@@ -36,6 +43,7 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "path": "^0.12.7",
